# abstract-validation-base

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  context7.json  llms.txt  pyproject.toml
.cursor/plans/: logfire_integration_research_54669645.plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: issue-triage.yml  lint.yml  release.yml  tests.yml  version-check.yml
src/abstract_validation_base/: __init__.py  base.py  events.py  process_log.py  protocols.py  results.py  rich_observers.py  runner.py  sqlmodel_support.py  validators.py  whylogs_observer.py  writers.py
tests/: __init__.py  conftest.py  test_base.py  test_events.py  test_nested.py  test_process_log.py  test_results.py  test_rich_observers.py  test_runner.py  test_sqlmodel_support.py  test_validators.py  test_whylogs_observer.py  test_writers.py
