[project]
name = "abstract-validation-base"
version = "0.2.0a1"
description = "Validation and process tracking for data transformation pipelines"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "jreakin", email = "johnreakin@gmail.com" }
]
keywords = ["validation", "pydantic", "audit", "data-quality", "transformation-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
requires-python = ">=3.12.8"
dependencies = [
    "pydantic>=2.12.5",
    "sqlmodel>=0.0.27",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.0.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=abstract_validation_base --cov-report=term-missing"
